@@ -10,7 +10,6 @@
 				"Picture": "![[![{1}]!]]([![Url:!:{0}]!] '[![{2}]!]')",
 				"Link": "[{1}]([![Url:!:{0}]!] '[![{2}]!]')"
 			},
-			{
 			"text/x-nazmd": {
 				"Picture": "![[![{1}]!]]([![Url:!:{0}]!] '[![{2}]!]')",
 				"Link": "[{1}]([![Url:!:{0}]!] '[![{2}]!]')"
